--- a/history.txt
+++ b/history.txt
@@ -1,2 +1,3 @@
-hello world, this is an example to undertand how to use git to update my repositories.
+hello world, this is an example to understand how to use git to update my repositories.
 I'm expecting my Australian Visa to travel to improve my english and will became in a great scientist.
+This tuesday I'm going to undergo a surgery about my eyes.
